# IT3170

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  justfile
tests/: CMakeLists.txt  process_executor.cpp  process_executor.hpp  test.cpp  test_parser.cpp  test_result.cpp  test_result.hpp  test_runner.cpp  test_runner.cpp.in  test_runner.hpp  test_utils.hpp
tests/exercises/range_minimum_query/: test_case_2.txt  test_case_3.txt
tests/week1/analyze_code_submission/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week1/largest_black_subrect/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week1/maze/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt  test_case_6.txt
tests/week1/range_minimum_query/: test_case_2.txt  test_case_3.txt  test_case_4.txt
tests/week1/telco_basic_query/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt  test_case_6.txt  test_case_7.txt  test_case_9.txt
tests/week2/balanced_courses_assignments/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week2/cbus/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week2/count_integer_linear_eq/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week3/disjoint_segment/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week3/inversion/: test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week3/max_distance_subseq/: test_case_1.txt  test_case_3.txt  test_case_4.txt
tests/week4/gold_mining/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt  test_case_6.txt
tests/week4/max_even_subseq/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_5.txt
tests/week4/nurse/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week4/warehouse/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week5/bridges_arti_points/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt
tests/week5/ic_bus/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt  test_case_6.txt  test_case_7.txt
tests/week5/make_span_schedule/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  (+1 more)
(+52 files in other folders)
